<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/app_screen_padding_top"
    tools:context="in.amankumar110.madenewsapp.ui.auth.SignUpFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/iv_app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/app_logo"/>

    <TextView
        android:layout_marginTop="@dimen/spacing_l"
        android:id="@+id/tv_signup_title"
        android:text="@string/signup_heading"
        android:fontFamily="@font/rubik_medium"
        android:textSize="@dimen/text_l"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_signup_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/signup_sub_heading"
        android:textSize="@dimen/text_m"
        android:textAlignment="center"
        />

    <in.amankumar110.madenewsapp.ui.customviews.IconEditTextView
        android:id="@+id/icon_edit_text_view_user_name"
        android:layout_marginTop="@dimen/spacing_xl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_subtitle"
        android:layout_marginHorizontal="@dimen/spacing_l"
        app:hint="@string/username_hint"
        app:icon="@drawable/ic_username"
        android:autofillHints="emailAddress"
        android:lines="1"
        android:inputType="textEmailAddress"/>


    <in.amankumar110.madenewsapp.ui.customviews.IconEditTextView
        android:id="@+id/icon_edit_text_view_email"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_edit_text_view_user_name"
        android:layout_marginHorizontal="@dimen/spacing_l"
        app:hint="@string/email_hint"
        app:icon="@drawable/ic_email"
        android:autofillHints="emailAddress"
        android:lines="1"
        android:inputType="textEmailAddress"/>

    <in.amankumar110.madenewsapp.ui.customviews.IconEditTextView
        android:lines="1"
        android:id="@+id/icon_edit_text_view_password"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_edit_text_view_email"
        android:layout_marginHorizontal="@dimen/spacing_l"
        app:hint="@string/password_hint"
        app:icon="@drawable/ic_security_password"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <in.amankumar110.madenewsapp.ui.customviews.IconEditTextView
        android:id="@+id/icon_edit_text_view_age"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_edit_text_view_password"
        android:layout_marginHorizontal="@dimen/spacing_l"
        app:hint="@string/age_hint"
        app:icon="@drawable/ic_age"
        android:maxLength="2"
        android:lines="1"
        android:inputType="number"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppButtonStyle"
        android:layout_marginTop="@dimen/spacing_xl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:text="@string/signup_sign_up_button_text"
        app:layout_constraintTop_toBottomOf="@+id/icon_edit_text_view_age" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppButtonStyle"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:text="@string/signup_sign_in_button_text"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />


</androidx.constraintlayout.widget.ConstraintLayout>